@@ -1,5 +1,7 @@
 1.3.1 (Pending)
-* Added:  reading files from SFTP server.
+* Added: Reading files from SFTP server.
+* Added: jibx_bind method to use JiBX or Java<=>XML binding (by David
+Peterson).
 * Changed: Upgraded to Net::SSH 2.0 and Net::SFTP 2.0.
 * Fixed: BUILDR-67 HTTP GET now works with query parameters (Tommy Knowlton).
 * Fixed: BUILDR-68 Now accepting JAVA_HOME setting on OS X (Nathan Hamblen).
